.gsd.migrating/exec/209c913f-788f-460b-b149-1b045cdc8f34.stderr
    Checking cmt-rs v0.1.0 (/mnt/j/cmt-rs)
error[E0425]: cannot find type `DowngraderStatusUiRow` in this scope
   --> src/main.rs:230:35
    |
230 | ...ec<DowngraderStatusUiRow>,
    |       ^^^^^^^^^^^^^^^^^^^^^
    |
   ::: src/domain/downgrader.rs:290:1
    |
290 |...erStatusRow {
    |...----------- similarly named struct `DowngraderStatusRow` defined here
    |
help: a struct with a similar name exists
    |
230 -     current_game_status_rows: Vec<DowngraderStatusUiRow>,
230 +     current_game_status_rows: Vec<DowngraderStatusRow>,
    |
help: you might be missing a type parameter
    |
229 | struct DowngraderUiProjection<DowngraderStatusUiRow> {
    |                              +++++++++++++++++++++++

error[E0425]: cannot find type `DowngraderStatusUiRow` in this scope
   --> src/main.rs:231:43
    |
231 | ...ec<DowngraderStatusUiRow>,
    |       ^^^^^^^^^^^^^^^^^^^^^
    |
   ::: src/domain/downgrader.rs:290:1
    |
290 |...erStatusRow {
    |...----------- similarly named struct `DowngraderStatusRow` defined here
    |
help: a struct with a similar name exists
    |
231 -     current_creation_kit_status_rows: Vec<DowngraderStatusUiRow>,
231 +     current_creation_kit_status_rows: Vec<DowngraderStatusRow>,
    |
help: you might be missing a type parameter
    |
229 | struct DowngraderUiProjection<DowngraderStatusUiRow> {
    |                              +++++++++++++++++++++++

error[E0425]: cannot find type `DowngraderPlanUiRow` in this scope
   --> src/main.rs:235:20
    |
235 | ...ec<DowngraderPl...
    |       ^^^^^^^^^^^^^^^^^^^
    |
   ::: src/domain/downgrader.rs:290:1
    |
290 |...erStatusRow {
    |...----------- similarly named struct `DowngraderStatusRow` defined here
    |
help: a struct with a similar name exists
    |
235 -     plan_rows: Vec<DowngraderPlanUiRow>,
235 +     plan_rows: Vec<DowngraderStatusRow>,
    |
help: you might be missing a type parameter
    |
229 | struct DowngraderUiProjection<DowngraderPlanUiRow> {
    |                              +++++++++++++++++++++

error[E0425]: cannot find type `DowngraderLogUiRow` in this scope
   --> src/main.rs:239:19
    |
239 | ...ec<DowngraderL...,
    |       ^^^^^^^^^^^^^^^^^^
    |
   ::: src/domain/downgrader.rs:290:1
    |
290 |...erStatusRow {
    |...----------- similarly named struct `DowngraderStatusRow` defined here
    |
help: a struct with a similar name exists
    |
239 -     log_rows: Vec<DowngraderLogUiRow>,
239 +     log_rows: Vec<DowngraderStatusRow>,
    |
help: you might be missing a type parameter
    |
229 | struct DowngraderUiProjection<DowngraderLogUiRow> {
    |                              ++++++++++++++++++++

error[E0425]: cannot find type `DowngraderWindow` in this scope
   --> src/main.rs:412:14
    |
412 | ...: &Downgr...ndow,
    |       ^^^^^^...^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
   --> src/main.rs:498:14
    |
498 | ...: &Downgr...ndow,
    |       ^^^^^^...^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
   --> src/main.rs:702:25
    |
702 | ...: &DowngraderWindow,
    |       ^^^^^^^^^^^^^^^^ ...und in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:1114:25
     |
1114 | ...: &DowngraderWindow,
     |       ^^^^^^^^^^^^^^^^...ound in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:1537:14
     |
1537 | ...: &Downg...indow,
     |       ^^^^^...^^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:1577:14
     |
1577 | ...: &Downg...indow,
     |       ^^^^^...^^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:1637:14
     |
1637 | ...: &Downg...indow,
     |       ^^^^^...^^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:1670:14
     |
1670 | ...: &Downg...indow,
     |       ^^^^^...^^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:1703:14
     |
1703 | ...: &Downg...indow,
     |       ^^^^^...^^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:1738:14
     |
1738 | ...: &Downg...indow,
     |       ^^^^^...^^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:1776:14
     |
1776 | ...: &Downg...indow,
     |       ^^^^^...^^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:1951:14
     |
1951 | ...: &Downg...indow,
     |       ^^^^^...^^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:3497:14
     |
3497 | ...: &Downg...indow,
     |       ^^^^^...^^^^^ not found in this scope

error[E0425]: cannot find type `DowngraderWindow` in this scope
    --> src/main.rs:3560:41
     |
3560 | ...: &DowngraderWindow, p...
     |       ^^^^^^^^^^^^^^^^ not found in th...pe

error[E0425]: cannot find type `DowngraderStatusUiRow` in this scope
    --> src/main.rs:3585:10
     |
3585 | ...ec<D...atusUiRow> {
     |       ^...^^^^^^^^^
     |
    ::: src/domain/downgrader.rs:290:1
     |
 290 ...derStatusRow {
     ...------------ similarly named struct `DowngraderStatusRow` defined here
     |
help: a struct with a similar name exists
     |
3585 - ) -> Vec<DowngraderStatusUiRow> {
3585 + ) -> Vec<DowngraderStatusRow> {
     |
help: you might be missing a type parameter
     |
3582 | fn format_downgrader_status_rows<DowngraderStatusUiRow>(
     |                                 +++++++++++++++++++++++

error[E0422]: cannot find struct, variant or union type `DowngraderStatusUiRow` in this scope
    --> src/main.rs:3589:20
     |
3589 | ...w| DowngraderS...{
     |       ^^^^^^^^^^^^^^^^^^^^^
     |
    ::: src/domain/downgrader.rs:290:1
     |
 290 ...derStatusRow {
     ...------------ similarly named struct `DowngraderStatusRow` defined here
     |
help: a struct with a similar name exists
     |
3589 -         .map(|row| DowngraderStatusUiRow {
3589 +         .map(|row| DowngraderStatusRow {
     |

error[E0425]: cannot find type `DowngraderPlanUiRow` in this scope
    --> src/main.rs:3598:88
     |
3598 | ...-> DowngraderPlanUiRow {
     |       ^^^^^^^^^^^^^^^^^^^
     |
    ::: src/domain/downgrader.rs:290:1
     |
 290 ...derStatusRow {
     ...------------ similarly named struct `DowngraderStatusRow` defined here
     |
help: a struct with a similar name exists
     |
3598 - fn format_downgrader_plan_row(row: &services::downgrader::DowngraderPreviewPlanRow) -> DowngraderPlanUiRow {
3598 + fn format_downgrader_plan_row(row: &services::downgrader::DowngraderPreviewPlanRow) -> DowngraderStatusRow {
     |

error[E0422]: cannot find struct, variant or union type `DowngraderPlanUiRow` in this scope
    --> src/main.rs:3613:5
     |
3613 |   ...derPlanUiRow {
     |   ...^^^^^^^^^^^^
     |
    ::: src/domain/downgrader.rs:290:1
     |
 290 ...derStatusRow {
     ...------------ similarly named struct `DowngraderStatusRow` defined here
     |
help: a struct with a similar name exists
     |
3613 -     DowngraderPlanUiRow {
3613 +     DowngraderStatusRow {
     |

error[E0425]: cannot find type `DowngraderLogUiRow` in this scope
    --> src/main.rs:3621:66
     |
3621 | ...-> DowngraderLogUiRow {
     |       ^^^^^^^^^^^^^^^^^^
     |
    ::: src/domain/downgrader.rs:290:1
     |
 290 ...derStatusRow {
     ...------------ similarly named struct `DowngraderStatusRow` defined here
     |
help: a struct with a similar name exists
     |
3621 - fn format_downgrader_log_row(row: &DowngraderExecutionLogRow) -> DowngraderLogUiRow {
3621 + fn format_downgrader_log_row(row: &DowngraderExecutionLogRow) -> DowngraderStatusRow {
     |

error[E0422]: cannot find struct, variant or union type `DowngraderLogUiRow` in this scope
    --> src/main.rs:3622:5
     |
3622 |   ...aderLogUiRow {
     |   ...^^^^^^^^^^^^
     |
    ::: src/domain/downgrader.rs:290:1
     |
 290 ...derStatusRow {
     ...------------ similarly named struct `DowngraderStatusRow` defined here
     |
help: a struct with a similar name exists
     |
3622 -     DowngraderLogUiRow {
3622 +     DowngraderStatusRow {
     |

warning: unused imports: `DowngraderPlanStepKind` and `DowngraderProgress`
  --> src/main.rs:49:36
   |
49 | ...t, DowngraderPlanStepKind, Downg...s,
   |       ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^...^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `DeltaDownloader`
  --> src/main.rs:82:9
   |
82 | ...   De...wnloader, D...
   |       ^^...^^^^^^^^

error[E0433]: cannot find type `DowngraderWindow` in this scope
   --> src/main.rs:285:29
    |
285 | ... = DowngraderWindow::n...
    |       ^^^^^^^^^^^^^^^^ use ...eclared type `DowngraderWindow`

Some errors have detailed explanations: E0422, E0425, E0433.
For more information about an error, try `rustc --explain E0422`.
warning: `cmt-rs` (bin "cmt-rs") generated 2 warnings
error: could not compile `cmt-rs` (bin "cmt-rs") due to 25 previous errors; 2 warnings emitted
